# ShowerModel

./: .buildinfo  .gitignore  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.md  ShowerModel.html  UC1 Track visualization.ipynb  UC2 Shower profile.ipynb  UC4 Observatory events.ipynb  __init__.py  atmosphere.py  bibliography.html  cherenkov.py  environment.yml  fluorescence.py  genindex.html  index.html  modules.html  objects.inv  profile.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  signal_or.py  track.py
.github/: release-drafter.yml
.github/workflows/: ci.yml  default.yml  deploy.yml  publish-to-test-pypi.yml  pull_request.yml  pypi_publish.yml  python-publish.yml
ShowerModel/: __init__.py  _dev_version.py  atmosphere.py  cherenkov.py  event.py  observatory.py  profile.py  shower.py  signal.py  telescope.py  track.py  version.py
ToyModel/: __init__.py  atmosphere.py  cherenkov.py  event.py  fluorescence.py  image.py  observatory.py  profile.py  projection.py  shower.py  signal.py  telescope.py  tools.py  track.py
_sources/: bibliography.rst.txt  modules.rst.txt
_sources/introduction/: index.rst.txt
_sources/tutorials/: UC5_Camera_images.ipynb.txt
docs/: Makefile  ShowerModel.rst  conf.py  index.rst  introduction.rst  requirements.txt
docs/introduction/: index.rst
docs/package/: atmosphere.rst  cherenkov.rst  event.rst  fluorescence.rst  image.rst  observatory.rst  package.rst  profile.rst  projection.rst  shower.rst  signal.rst  telescope.rst  track.rst
docs/source/: ShowerModel.rst  conf.py  index.rst  modules.rst
docs/tutorials/: UC0_Playing_around_with_ShowerModel.nblink  UC1_Track_visualization.ipynb  UC1_Track_visualization.nblink  UC2_Shower_profile.nblink  UC3_Signal_production_and_ground_distribution.nblink  UC4_Observatory_events.ipynb  index.rst  (+2 more)
extra/: atm_models.toml  mean_annual_global_reference_atmosphere.xlsx  showermodel_config.toml
introduction/: index.html
notebooks/: UC0_Playing_around_with_ShowerModel.ipynb  UC1 Track visualization.ipynb  UC1_Track_visualization.ipynb  UC2 Shower profile.ipynb  UC2_Shower_profile.ipynb  UC3 Signal production and ground distribution.ipynb  UC3_Signal_production_and_ground_distribution.ipynb  UC4 Observatory events.ipynb  UC4_Observatory_events.ipynb  UC5 Camera images.ipynb  UC5_Camera_images.ipynb
showermodel/: __init__.py  _dev_version.py  _tools.py  atmosphere.py  atmosphere_test.py  cherenkov.py  event.py  fluorescence.py  image.py  observatory.py  profile.py  projection.py  shower.py  signal.py  telescope.py  track.py  version.py
tutorials/: UC0_Playing_around_with_ShowerModel.html  UC1_Track_visualization.html  UC2_Shower_profile.html  UC2_Shower_profile.ipynb  UC3_Signal_production_and_ground_distribution.html  UC4_Observatory_events.html  UC5_Camera_images.html  index.html
(+25 files in other folders)
