[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
name = ShowerModel
description = Modelling cosmic-ray showers, their light production and its detection
author = Jaime Rosado
author_email = jrosadov@ucm.es
license = GPL-3.0
url=https://github.com/JaimeRosado/ShowerModel
long_description = file: README.md
long_description_content_type = text/markdown
github_project = JaimeRosado/ShowerModel
