[metadata]
name = ShowerModel
description = Modelling cosmic-ray showers, their light production and its detection
author = Jaime Rosado
author_email = jrosadov@ucm.es
license = GPL-3.0
url=https://github.com/JaimeRosado/ShowerModel
long_description = file: README.md
long_description_content_type = text/markdown
github_project = JaimeRosado/ShowerModel

[options]
packages = find:
package_dir =
	= src
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    toml
    ipython
    openpyxl

[options.packages.find]
where = src
exclude = showermodel._dev_version

[options.package_data]
showermodel.constants = *.toml

[options.extras_require]
tests =
  pytest
  pytest-cov

docs =
    sphinx ~= 5.0
    sphinx_rtd_theme
    sphinx_automodapi
    sphinx
    nbsphinx
    nbsphinx-link
    numpydoc
    jupyter
    notebook
    graphviz

dev =
  %(tests)s
  %(docs)s
  setuptools_scm
